--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ packages = [{include = "sandeshah", from = "src"}]
 
 [tool.poetry.dependencies]
 python = "^3.12"
+pytest = "^8.3.4"
 
 
 [build-system]
