--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ packages = [{include = "sandeshah", from = "src"}]
 [tool.poetry.dependencies]
 python = "^3.12"
 pytest = "^8.3.4"
+boto3 = "^1.35.86"
 
 
 [build-system]
